syntax = "proto3";

package go.micro.api.account;

service Account {
	rpc ReadUser(ReadUserRequest) returns (ReadUserResponse) {};
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
	rpc Signup(SignupRequest) returns (SignupResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Token(TokenRequest) returns (TokenResponse);
}

message SignupRequest {
	string email = 1;
	string password = 2;
	string invite_code = 3;
	bool project_invite = 4;
}

message SignupResponse {
	User user = 1;
	string refresh_token = 2;
	Token token = 3;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	User user = 1;
	string refresh_token = 2;
	Token token = 3;
}

message Plan {
	string id = 1;
	string name = 2;
	int64 amount = 3;
	string interval = 4;
	bool available = 5;
}

message Subscription {
	string id = 1;
	Plan plan = 2;
}

message Token {
	string access_token = 1;
	string refresh_token = 2;
	int64 created = 3;
	int64 expiry = 4;
}

message User {
	string id = 1;					// uuid
	int64 created = 2;			// unix
	int64 updated = 3;			// unix
	string first_name = 4;
	string last_name = 5;
	string email = 6;
	repeated string scopes = 7;
	string invite_code = 8;
	bool invite_verified = 9;	
}

message ReadUserRequest {}

message ReadUserResponse {
	User user = 1;
}

message UpdateUserRequest {
	User user = 1;
}

message UpdateUserResponse {
	User user = 1;
}

message DeleteUserRequest {}

message DeleteUserResponse {}

message TokenRequest {
	string id = 1;
	string refresh_token = 2;
}

message TokenResponse {
	Token token = 1;
}